Fix T101824: Line art flickers when light object has scaling.

Line art doesn't expect light or camera objects to have scaling.